# BaseballSim

./: .gitignore  Batter.cpp  Batter.h  CMakeLists.txt  Game.cpp  Game.h  Pitcher.cpp  Pitcher.h  Player.cpp  Player.h  README.md  Team.cpp  Team.h  away.txt  home.txt  input.txt  main.cpp
